--- a/public/assets/css/theme-default.css
+++ b/public/assets/css/theme-default.css
@@ -134,7 +134,7 @@ a.bg-primary:hover, a.bg-primary:focus {
 .pagination li.active > a:not(.page-link):hover,
 .pagination li.active > a:not(.page-link):focus {
   border-color: #696cff;
-  background-color: #696cff;
+  background-color: #000000;
   color: #fff;
   box-shadow: 0 0.125rem 0.25rem rgba(105, 108, 255, 0.4);
 }
